Facebook Auth start (Google Auth broke)

--- a/ToDoList/Podfile
+++ b/ToDoList/Podfile
@@ -8,4 +8,8 @@ target 'ToDoList' do
   pod 'Firebase/Database', :inhibit_warnings => true
   pod 'Firebase/Auth', :inhibit_warnings => true
   pod 'GoogleSignIn', :inhibit_warnings => true
+  pod 'FBSDKLoginKit', :inhibit_warnings => true
+  pod 'FacebookCore'
+  pod 'FacebookLogin'
+  pod 'FacebookShare'
 end
