--- a/ToDoList/ToDoList/Info.plist
+++ b/ToDoList/ToDoList/Info.plist
@@ -50,5 +50,30 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+ 
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb783081142073465</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>783081142073465</string>
+    <key>FacebookDisplayName</key>
+    <string>ToDoList</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+ 
+    
+    
+    
 </dict>
 </plist>
