--- a/ToDoList/Podfile
+++ b/ToDoList/Podfile
@@ -8,8 +8,9 @@ target 'ToDoList' do
   pod 'Firebase/Database', :inhibit_warnings => true
   pod 'Firebase/Auth', :inhibit_warnings => true
   pod 'GoogleSignIn', :inhibit_warnings => true
-  pod 'FBSDKLoginKit', :inhibit_warnings => true
-  pod 'FacebookCore'
-  pod 'FacebookLogin'
-  pod 'FacebookShare'
+  pod 'FBSDKLoginKit', '4.42.0', :inhibit_warnings => true
+  pod 'FBSDKCoreKit', '4.42.0'
+  pod 'FacebookCore', '0.5.0'
+  pod 'FacebookLogin', '0.5.0'
+  #pod 'FacebookShare'
 end
