--- a/ToDoList/Podfile
+++ b/ToDoList/Podfile
@@ -3,7 +3,7 @@
 
 use_frameworks!
 target 'ToDoList' do
-  #pod	'MaterialComponents'
+  pod	'MaterialComponents'
   pod 'Firebase/Core', :inhibit_warnings => true
   pod 'Firebase/Database', :inhibit_warnings => true
   pod 'Firebase/Auth', :inhibit_warnings => true
